@@ -1,3 +1,7 @@
+2004-02-25  ujwal
+
+	* Fixed display bug in scrollUp.
+
 2004-02-25  fabian
 
 	* Changed all the html docs into shtml
